Archive2/46/5f8b56e4df2be0/output
main.cpp:2:11: error: expected parameter declarator
    int i(0);
          ^
main.cpp:2:11: error: expected ')'
main.cpp:2:10: note: to match this '('
    int i(0);
         ^
2 errors generated.
